--- a/package.json
+++ b/package.json
@@ -3,13 +3,8 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "lint": "tsc --noEmit && biome check --write ."
-  },
-  "bun-create": {
-    "postinstall": [
-      "git branch -M main"
-    ],
-    "start": "View the README.md for usage instructions"
+    "lint": "tsc --noEmit && biome check --write",
+    "prepare": "find .githooks -type f -exec ln -srf {} .git/hooks/ \\;"
   },
   "dependencies": {
     "sesame-bun": "^0.1.3"
@@ -19,7 +14,9 @@
     "@types/bun": "^1.2.18",
     "typescript": "^5.8.3"
   },
-  "trustedDependencies": [
-    "@biomejs/biome"
-  ]
+  "bun-create": {
+    "postinstall": ["git branch -M main"],
+    "start": "View the README.md for usage instructions"
+  },
+  "trustedDependencies": ["@biomejs/biome"]
 }
