--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "sesame-bun": "^0.1.3"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.0.6",
+    "@biomejs/biome": "^2.1.1",
     "@types/bun": "^1.2.18",
     "typescript": "^5.8.3"
   },
   "bun-create": {
-    "postinstall": ["git branch -M main"],
+    "postinstall": [
+      "git branch -M main"
+    ],
     "start": "View the README.md for usage instructions"
   }
 }
