--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "sesame-bun": "^0.1.3"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.1.1",
-    "@types/bun": "^1.2.18",
-    "typescript": "^5.8.3"
+    "@adamhl8/configs": "^0.15.15",
+    "@biomejs/biome": "^2.2.4",
+    "@types/bun": "^1.2.22",
+    "knip": "^5.63.1",
+    "markdown-toc": "^1.2.0",
+    "typescript": "^5.9.2"
   },
   "bun-create": {
     "postinstall": [
