--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "lint": "tsc --noEmit && biome check --write",
+    "lint": "markdown-toc -i --bullets '-' --maxdepth 3 ./README.md && tsc --noEmit && biome check --write && adamhl8-knip",
     "prepare": "find .githooks -type f -exec ln -srf {} .git/hooks/ \\; || true"
   },
   "dependencies": {
@@ -18,9 +18,7 @@
     "typescript": "^5.9.2"
   },
   "bun-create": {
-    "postinstall": [
-      "git branch -M main"
-    ],
+    "postinstall": ["git branch -M main"],
     "start": "View the README.md for usage instructions"
   }
 }
