--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
-  "name": "sesame-starter",
-  "type": "module",
-  "private": true,
-  "scripts": {
-    "lint": "markdown-toc -i --bullets '-' --maxdepth 3 ./README.md && tsc --noEmit && biome check --write && adamhl8-knip",
-    "prepare": "find .githooks -type f -exec ln -srf {} .git/hooks/ \\; || true"
-  },
-  "dependencies": {
-    "sesame-bun": "^0.1.3"
-  },
-  "devDependencies": {
-    "@adamhl8/configs": "^0.15.15",
-    "@biomejs/biome": "^2.2.4",
-    "@types/bun": "^1.2.22",
-    "knip": "^5.63.1",
-    "markdown-toc": "^1.2.0",
-    "typescript": "^5.9.2"
-  },
-  "bun-create": {
-    "postinstall": ["git branch -M main"],
-    "start": "View the README.md for usage instructions"
-  }
+	"name": "sesame-starter",
+	"type": "module",
+	"private": true,
+	"scripts": {
+		"lint": "markdown-toc -i --bullets '-' --maxdepth 3 ./README.md && tsc --noEmit && biome check --write && adamhl8-knip",
+		"prepare": "find .githooks -type f -exec ln -srf {} .git/hooks/ \\; || true"
+	},
+	"dependencies": {
+		"sesame-bun": "^0.1.3"
+	},
+	"devDependencies": {
+		"@adamhl8/configs": "^0.15.19",
+		"@biomejs/biome": "^2.2.4",
+		"@types/bun": "^1.2.22",
+		"knip": "^5.63.1",
+		"markdown-toc": "^1.2.0",
+		"typescript": "^5.9.2"
+	},
+	"bun-create": {
+		"postinstall": [
+			"git branch -M main"
+		],
+		"start": "View the README.md for usage instructions"
+	}
 }
